--- a/components/TitleText/index.css
+++ b/components/TitleText/index.css
@@ -29,6 +29,7 @@
   align-items: center;
   justify-content: space-between;
   border: 1px solid #000000;
+  background-color: #FFFFFF;
   padding: 14px 20px;
   font-size: 16px;
   line-height: 21px;
